<resources>
    <string name="app_name">Calculadora IMC</string>
    <string name="tituloapp">APP FITNESS</string>
    <string name="titulomenu">Menu</string>
    <string name="btnimc">Calcular IMC</string>
    <string name="btnconversor">Conversor</string>
    <string name="btnvoltar">Sair</string>
    <string name="btnimcc">Calcular IMC</string>
    <string name="tituloimc">Calculadora IMC</string>
    <string name="ctxpeso">Insira o seu peso...</string>
    <string name="ctxaltura">Insira a sua altura...</string>
    <string name="btnReturn">Voltar ao Menu</string>
    <string name="titConv">Conversor</string>
    <string name="ctxPolegada">Insira o valor em Polegadas ...</string>
    <string name="btnConvert">Converter</string>
    <string name="pol_para_pes">Polegadas para Pés</string>
</resources>