<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MENU">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/titulomenu"
        android:textAlignment="center"
        android:textSize="16pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnImc"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:onClick="vaiParaCalculoIMC"
        android:text="CALCULAR IMC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:text="@string/btnimc" />

    <Button
        android:id="@+id/btnConversor"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:onClick="vaiParaConversor"
        android:text="@string/btnconversor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnImc" />

    <Button
        android:id="@+id/btnSair"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/btnvoltar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConversor" />
</androidx.constraintlayout.widget.ConstraintLayout>