<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Conversor">

    <TextView
        android:id="@+id/txtMilha"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtJarda" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:text="@string/titConv"
        android:textSize="16pt"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="30dp" />

    <EditText
        android:id="@+id/ctxConversor"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/ctxPolegada"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/txtPes"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginTop="65dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConvert" />

    <TextView
        android:id="@+id/txtJarda"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPes" />

    <Button
        android:id="@+id/btnConvert"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:onClick="btnConvertP"
        android:text="@string/btnConvert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ctxConversor" />

    <Button
        android:id="@+id/btnVoltarM"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:onClick="voltar"
        android:text="@string/btnReturn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMilha" />

</androidx.constraintlayout.widget.ConstraintLayout>